# dual_extrinsic_calibration

./: CMakeLists.txt  README.md  package.xml
config/: config.rviz  realsense.rviz  usbcamrrealsense.rviz
include/dual_extrinsic_calibration/: dualExtrinsicCalibration.h  poseEstimation.h
launch/: calibration.launch  cams.launch  cams_and_calibration.launch  dual.launch
src/: dualExtrinsicCalibration.cpp  dualExtrinsicCalibrationNode.cpp  poseEstimation.cpp  tfPosePublisher.cpp
