<?xml version="1.0"?>
<package format="2">
  <name>dual_extrinsic_calibration</name>
  <version>0.0.0</version>
  <description>The dual_extrinsic_calibration package</description>

  <maintainer email="r.ullrich.1@campus.tu-belin.de">raphael</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>Eigen3</build_depend>
  
  


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
